<resources>
    <string name="app_name">MovieFLIX</string>
    <string name="inicio">Inicio</string>
    <string name="top">Top</string>
    <string name="proximas">Próximas Películas</string>
    <string name="proximamente">Próximamente</string>
    <string name="buscar">Buscar</string>
    <string name="favoritos">Favoritos</string>
    <string name="error_message">Error al obtener resultados, por favor intente de nuevo.</string>
    <string name="trending_movies">MovieFLIX</string>
    <string name="top_movies">Películas Mejor Valoradas</string>
    <string name="search_a_movie">Buscar una pelicula</string>
    <string name="search_movie">BUSCAR</string>
    <string name="add_to_my_favorites">Agregar a Favoritos</string>
    <string name="general">General</string>
    <string name="release">Fecha de lanzamiento</string>
    <string name="duration">Duracion</string>
    <string name="genres">Generos</string>
    <string name="producers">Productores</string>
    <string name="trailer">Trailer</string>
    <string name="watch_trailer">Ver Trailer</string>
    <string name="cast">Reparto</string>
    <string name="crew">Equipo</string>
    <string name="favorite_movies">Peliculas Favoritas</string>
    <string name="remove_from_favorites">Eliminar de mis favoritos</string>
    <string name="add_to_favorites">Agregar a Favoritos</string>
    <string name="favorites_removed_1">Eliminado</string>
    <string name="favorites_removed_2">de tus favoritos </string>
    <string name="favorites_added_1">Añadido</string>
    <string name="favorites_added_2">a tus favoritos</string>
    <string name="minutes">minutos</string>
    <string name="unknown">Desconocido</string>
    <string name="results_heading">Resultados para</string>
    <string name="no_favorite_movies">Usted no tiene ninguna película en favoritos. Agrega uno yendo a la página de detalles de una película..</string>
    <string name="no_description">Descripcion NO DISPONIBLE</string>
    <string name="no_trailer">Trailer NO DISPONIBLE</string>

    <string name="title_activity_book_detail"></string>
    <string name="title_activity_search"></string>
    <string name="title_activity_favorites"></string>
    <string name="title_activity_proximas">Proximas</string>
    <string name="title_activity_top">TopActivity</string>

    <string name="title_activity_splash">MovieFLIX</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="title_activity_info">InfoActivity</string>
</resources>
