<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_proximas"
        android:icon="@drawable/ic_local_movies_black_24dp"
        android:title="@string/proximamente" />

    <item
        android:id="@+id/navigation_top"
        android:icon="@drawable/ic_whatshot_black_24dp"
        android:title="@string/top" />

    <item
        android:id="@+id/navigation_inicio"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/inicio" />

    <item
        android:id="@+id/navigation_buscar"
        android:icon="@drawable/ic_search_black_24dp"
        android:title="@string/buscar" />

    <item
        android:id="@+id/navigation_favoritos"
        android:icon="@drawable/ic_favorite_black_24dp"
        android:title="@string/favoritos" />

</menu>
